[package]
name = "solana-arbitrage-bot"
version = "0.1.0"
edition = "2021"
authors = ["HeliusDevLabs <contact@heliusdevlabs.com>"]
description = "Advanced Solana Arbitrage Bot with gRPC, Jito bundles, and cross-DEX monitoring"
license = "MIT"
repository = "https://github.com/heliusdevlabs/solana-arbitrage-bot"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.12"
prost-types = "0.12"

# Solana ecosystem
solana-sdk = "2.0"
solana-client = "2.0"
anchor-lang = "0.30"
anchor-client = "0.30"

# Jito and MEV
jito-bundle = "0.1"
jito-sdk = "0.1"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
anyhow = "1.0"
thiserror = "1.0"

# Logging and monitoring
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Math and utilities
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.32"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Database (optional for historical data)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# WebSocket for real-time data
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Jupiter Aggregator integration
jupiter-swap-api = "0.1"

# Encryption and security
ring = "0.17"
base64 = "0.21"
bs58 = "0.5"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Error handling
eyre = "0.6"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
