[package]
name = "solana-jupiter-arbitrage-bot"
version = "1.0.0"
edition = "2021"
authors = ["roswellydev yabidev@hgmail.com>"]
description = "Advanced Solana Arbitrage Bot with gRPC, Jito bundles, and cross-DEX monitoring"
license = "MIT"
repository = "https://github.com/roswelly/solana-jupiter-bot"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1.18"

# gRPC and Protocol Buffers
tonic = "0.14.2"
prost = "0.14.3"
prost-types = "0.14.3"

# Solana ecosystem
solana-sdk = "2.0"
solana-client = "2.0"
anchor-lang = "0.32.1"
anchor-client = "0.32.1"

# Jito and MEV
jito-bundle = "0.1"
jito-sdk = "0.1"

# HTTP and networking
reqwest = { version = "0.13.1", features = ["json", "stream"] }
hyper = "1.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI and configuration
clap = { version = "4.5.56", features = ["derive"] }
config = "0.14"
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging and monitoring
log = "0.4"
env_logger = "0.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Math and utilities
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.36"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time and scheduling
chrono = { version = "0.4.43", features = ["serde"] }
cron = "0.13"

# Database (optional for historical data)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# WebSocket for real-time data
tokio-tungstenite = "0.23.0"
futures-util = "0.3.28"

# Jupiter Aggregator integration
jupiter-swap-api = "0.1"

# Encryption and security
ring = "0.17.14"
base64 = "0.22"
bs58 = "0.5"

# Random number generation
rand = "0.9.2"
rand_chacha = "0.3"

# Error handling
eyre = "0.6"

[build-dependencies]
tonic-build = "0.14.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
